# cofe_shop

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
apis/v1/core/: serializers.py  urls.py  views.py
apps/authentication/: api.py  serializers.py  tasks.py  urls.py  validators.py  views.py
apps/cart/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py
apps/cart/migrations/: 0001_initial.py  0002_initial.py  0003_rename_date_cartproduct_created_at_cart_created_at.py
apps/core_app/: admin.py  models.py
apps/core_app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_publicnotification_options.py  0003_rename_date_image_created_at.py  0004_image_height_image_size_image_width.py  0005_publicnotification.py
apps/product/: admin.py  api.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_initial.py  0002_productcategory_parent.py  0003_alter_productreview_parent.py  (+19 more)
apps/template/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py
core/utils/: environ.py  exceptions.py  jwt.py  otp.py  paginations.py  permissions.py  response.py  user_ip.py
data/: Car-Pile.csv  IAC-Valve.csv  Oxygen-Sensor.csv  Spark-Plug-Wire.csv  load_data.py
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_is_active.py  0002_user_created_at_user_updated_at_usernotification.py
(+5 files in other folders)
